<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="name_new_playlist">Название*</string>
    <string name="playlist_name">Название альбома</string>
    <string name="description_new_playlist">Описание</string>
    <string name="button_add_new_playlist">Создать</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="share_app_headerText">Поделиться Playlist Maker</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="support">Написать в поддержку</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="not_found_track_message">Ничего не нашлось</string>
    <string name="error_internet_connection_message">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="fft_your_medialibrary_is_empty">Ваша медиатека пуста</string>
    <string name="fp_you_havent_created_any_playlist">Вы не создали \nни одного плейлиста</string>
    <string name="fp_button_add_new_playlist">Новый плейлист</string>
    <string name="refresh_button">Обновить</string>
    <string name="text_history_title">Вы искали</string>
    <string name="button_history_clear">Очистить историю</string>
    <string name="audioplayer_tv_time_track_label">Длительность</string>
    <string name="audioplayer_tv_album_name_label">Альбом</string>
    <string name="audioplayer_tv_year_track_label">Год</string>
    <string name="audioplayer_tv_track_genre_label">Жанр</string>
    <string name="audioplayer_tv_track_country_label">Страна</string>
    <string name="library_activity_tablayout_favorite_tracks">Избранные треки</string>
    <string name="library_activity_tablayout_playlists">Плейлисты</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="agree_delete_track">Хотите удалить трек?</string>
    <string name="agree_delete_playlist">Хотите удалить плейлист?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="empty_tracks_share_message">В этом плейлисте нет треков</string>
    <string name="text_point">" • "</string>
    <string name="quantity_tracks">Количество треков</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>