<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityLinearLayoutStyle"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_back"
            app:icon="@drawable/button_back"
            style="@style/PanelHeaderButtonStyle" />

        <TextView
            android:text="@string/settings"
            style="@style/PanelHeaderTextStyle"/>
    </LinearLayout>

    <FrameLayout
        style="@style/SettingsFrameLayoutStyle"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="40dp" >

        <TextView
            style="@style/SettingsMessageTextStyle"
            android:text="@string/black_theme" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <FrameLayout
        style="@style/SettingsFrameLayoutStyle">

        <TextView
            android:id="@+id/text_share_app"
            style="@style/SettingsMessageTextStyle"
            android:text="@string/share_app"
            android:actionProviderClass=
                "android.widget.ShareActionProvider"/>

        <ImageView
            style="@style/SettingsImageStyle"
            android:src="@drawable/share_app" />
    </FrameLayout>

    <FrameLayout
        style="@style/SettingsFrameLayoutStyle">

        <TextView
            android:id="@+id/text_support"
            style="@style/SettingsMessageTextStyle"
            android:text="@string/support" />

        <ImageView
            style="@style/SettingsImageStyle"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        style="@style/SettingsFrameLayoutStyle">

        <TextView
            android:id="@+id/text_user_agreement"
            style="@style/SettingsMessageTextStyle"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/SettingsImageStyle"
            android:src="@drawable/user_agreement" />
    </FrameLayout>


</LinearLayout>