<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:textAllCaps="false"
            app:icon="@drawable/search"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="22dp"
            app:cornerRadius="@dimen/main_button_cornerRadius"/>

        <Button
            android:id="@+id/button_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/library"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:textAllCaps="false"
            app:icon="@drawable/library"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="22dp"
            app:cornerRadius="@dimen/main_button_cornerRadius" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:textAllCaps="false"
            app:icon="@drawable/settings"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="22dp"
            app:cornerRadius="@dimen/main_button_cornerRadius" />
    </LinearLayout>


</LinearLayout>