<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ActivityLinearLayoutStyle"
    tools:context=".search.ui.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/search"
            style="@style/PanelHeaderTextStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:background="@drawable/activity_search_shape" >

        <EditText
            android:id="@+id/et_input_search_text"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="4dp"
            android:hint="@string/search"
            android:layout_gravity="center"
            android:imeOptions="actionDone"
            android:singleLine="true"
            style="@style/SearchEditTextStyle"/>


        <ImageView
            android:id="@+id/iv_clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            style="@style/SearchImageViewStyle"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="240dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_search_result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_text_history_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="24dp"
                android:paddingBottom="12dp"
                android:text="@string/text_history_title"
                style="@style/ActivitySearchTextHistoryTitleStyle"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:visibility="visible"
                tools:listitem="@layout/activity_track"
                tools:itemCount="3"/>

            <Button
                android:id="@+id/btn_clear_history"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                app:cornerRadius="54dp"
                android:text="@string/button_history_clear"
                style="@style/ActivitySearchButtonClearHistoryStyle"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/iv_error_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="104dp"
                tools:src="@drawable/not_found_track_image_light_mode"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                tools:text="@string/error_internet_connection_message"
                style="@style/SearchActivityErrorTextStyles"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                android:text="@string/refresh_button"
                app:cornerRadius="54dp"
                style="@style/SearchActivityRefreshButtonStyles"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>