<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ActivityLinearLayoutStyle"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_back_activitySearch"
            android:layout_width="@dimen/panelHeader_button_width"
            android:layout_height="@dimen/panelHeader_button_height"
            app:icon="@drawable/button_back"
            style="@style/PanelHeaderButtonStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/search"
            style="@style/PanelHeaderTextStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:background="@drawable/activity_search_shape" >

        <EditText
            android:id="@+id/inputSearchText"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/search"
            android:layout_gravity="center"
            android:imeOptions="actionDone"
            android:singleLine="true"
            style="@style/SearchEditTextStyle"/>


        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            style="@style/SearchImageViewStyle"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <LinearLayout
                android:id="@+id/searchResultLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textHistoryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="24dp"
                    android:paddingBottom="12dp"
                    android:text="@string/text_history_title"
                    style="@style/ActivitySearchTextHistoryTitleStyle"
                    android:visibility="gone"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:visibility="visible"
                    tools:listitem="@layout/activity_track"
                    tools:itemCount="3"/>

                <Button
                    android:id="@+id/btnClearHistory"
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    app:cornerRadius="54dp"
                    android:text="@string/button_history_clear"
                    style="@style/ActivitySearchButtonClearHistoryStyle"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/errorImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="104dp"
                    tools:src="@drawable/not_found_track_image_light_mode"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/errorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="center"
                    tools:text="@string/error_internet_connection_message"
                    style="@style/SearchActivityErrorTextStyles"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/butRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:visibility="gone"
                    android:text="@string/refresh_button"
                    app:cornerRadius="54dp"
                    style="@style/SearchActivityRefreshButtonStyles"/>

            </LinearLayout>

    </ScrollView>

</LinearLayout>