<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CreateNewPlaylistFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".creationPlaylistWindow.ui.FragmentCreationPlaylist">
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageButton
            android:id="@+id/button_back"
            style="@style/ActivityAudioPlayerButtonBackStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/button_back" />

        <TextView
            android:id="@+id/title_playlist"
            style="@style/PanelHeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:text="@string/new_playlist" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="24dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/pick_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/playlist_image"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_new_playlist"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/create_text_view_color"
            app:hintTextColor="@color/create_text_view_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="17dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/add_photo"
            android:textColorHint="@color/tv_create_playlist"
            android:textColor="@color/tv_create_playlist">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:hint="@string/name_new_playlist"
                style="@style/FragmentCreationWindowsTextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_new_playlist"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/create_text_view_color"
            app:hintTextColor="@color/create_text_view_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="17dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/name_new_playlist"
            android:textColorHint="@color/tv_create_playlist"
            android:textColor="@color/tv_create_playlist">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:hint="@string/description_new_playlist"
                style="@style/FragmentCreationWindowsTextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/createPlaylistButtom"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/create_button"
            android:layout_marginHorizontal="17dp"
            android:layout_marginBottom="32dp"
            app:cornerRadius="8dp"
            android:text="@string/button_add_new_playlist"
            android:textSize="16sp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>